# network-service-contest

./: README.md
Benchmark/: 01_RunSmall.bat  02_RunMedium.bat  03_RunHeavy.bat  04_RunFull.bat  05_RunHuge.bat  RunHeavy.bat  RunMedium.bat  RunRandom.bat  RunSmall.bat
Cpp/AlexeyAntropov/: CMakeLists.txt
Cpp/AlexeyAntropov/Src/: WebClient.cpp  WebService.cpp
Cpp/IvanShipitsin/: boost.cpp  eigen.cpp  winapi.cpp
Csharp/AndreyTsirulev/MatrixServer/: MatrixMath.cs  MatrixServer.csproj  Program.cs
Erlang/AndreyTsirulev/: matrix.noiseide  rebar.config
Erlang/AndreyTsirulev/apps/matrix/c_src/: matrix_lib.c  matrix_lib.sln  matrix_lib.vcxproj  matrix_lib.vcxproj.filters
Erlang/AndreyTsirulev/apps/matrix/ebin/: matrix.app  matrix_acceptor.beam  matrix_acceptor_sup.beam  matrix_app.beam  matrix_connection.beam  matrix_connection_tests.beam  matrix_lib.beam  matrix_lib_tests.beam  matrix_listen.beam  matrix_sup.beam  matrix_worker.beam  matrix_worker_sup.beam
Erlang/AndreyTsirulev/apps/matrix/priv/: matrix_lib.exp  matrix_lib.lib
Erlang/AndreyTsirulev/apps/matrix/src/: matrix.app.src  (+9 more)
Erlang/AndreyTsirulev/etc/: app.config
Erlang/DaniilPavlenko/: README.txt  webserver_daniil.erl  webserver_daniil_parallel_rows.erl
Go/SergeiLvov/: WebServer.go
Julia/SergeiLvov/: WebServer_jl.julia
Python/DenisPerevalov/: MatrixPython.py  MatrixPython_cpu.py  MatrixPython_gpu.py
Rust/IgorBurdunin/: README.txt
Rust/IgorBurdunin/client/: Cargo.toml
Rust/IgorBurdunin/client/src/: main.rs
Rust/IgorBurdunin/server/: Cargo.toml
Rust/IgorBurdunin/server/src/: main.rs
(+2 files in other folders)
